# telegram-brain-claude

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEVELOPING.md  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  test_telegram.py
.github/workflows/: ci.yml  deploy.yml
docs/: 2026-04-29-session-changes.md  2026-05-02-brief-coupled-understanding.md  dm-router-prompt.md  mvp-spec.md  session-2026-05-01-understanding-worker-iteration.md  telegram-credentials-setup.md
infra/ansible/: playbook.yml
infra/ansible/inventory/: hosts.yml
infra/ansible/roles/app/tasks/: main.yml
infra/ansible/roles/app/templates/: tbc-bot.service.j2  tbc-ingestion.service.j2  tbc-mcp-server.service.j2  tbc-worker-brief.service.j2  tbc-worker-chat-tagger.service.j2  tbc-worker-commitments.service.j2  tbc-worker-radar.service.j2  tbc-worker-understanding.service.j2  tbc-worker-weekly.service.j2
infra/ansible/roles/backups/tasks/: main.yml
infra/ansible/roles/caddy/tasks/: main.yml
infra/ansible/roles/common/handlers/: main.yml
infra/ansible/roles/common/tasks/: main.yml
infra/ansible/roles/ollama/handlers/: main.yml
infra/ansible/roles/ollama/tasks/: main.yml
infra/ansible/roles/postgres/tasks/: main.yml
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: import-tg-export.py  tg-auth.py
scripts/dev/: list-chats.py
services/ingestion/: pyproject.toml
services/ingestion/tbc_ingestion/: __init__.py  client.py  gap_recovery.py  handlers.py  initial_backfill.py  main.py  pause.py
services/ingestion/tests/: test_gap_recovery.py  test_handlers.py
services/mcp-server/: conftest.py  pyproject.toml
services/mcp-server/tbc_mcp_server/: __init__.py  auth.py  db.py  main.py  models.py
services/mcp-server/tbc_mcp_server/tools/: brief.py  chat.py  commitments.py  feedback.py  relationship.py  search.py  signals.py  tags.py
services/mcp-server/tests/: test_auth.py  test_commitment_writes.py  test_tools.py  test_write_brief_feedback.py
services/tg-bot/: pyproject.toml
services/tg-bot/tbc_bot/: __init__.py  agent.py  guards.py  main.py  mcp_client.py
services/tg-bot/tbc_bot/handlers/: __init__.py  chat.py  commands.py  commitments.py  feedback.py  onboarding.py  retag.py  tags.py
services/tg-bot/tbc_bot/router/: __init__.py  decision.py  executors.py  llm.py  prompt.py  rules.py
services/tg-bot/tests/: __init__.py  test_agent.py  test_chat_handler.py  test_commands.py  test_mcp_client.py  test_router_eval.py  test_router_executors.py  test_router_llm.py  test_router_rules.py
services/worker-brief/: pyproject.toml
services/worker-brief/tbc_worker_brief/: __init__.py  assembler.py  main.py  sender.py
services/worker-brief/tests/: test_brief.py  test_drain.py
services/worker-chat-tagger/: conftest.py  pyproject.toml
services/worker-chat-tagger/tbc_worker_chat_tagger/: __init__.py  centroids.py  classifier.py  main.py  prompts.py
services/worker-chat-tagger/tests/: test_centroids.py  test_classifier.py
services/worker-commitments/: conftest.py  pyproject.toml
services/worker-commitments/tbc_worker_commitments/: __init__.py  extractor.py  main.py  relationship.py  stale.py
services/worker-commitments/tests/: test_commitment_extraction.py  test_relationship_state.py  test_stale.py
services/worker-radar/: conftest.py  pyproject.toml
services/worker-radar/tbc_worker_radar/: __init__.py  aggregator.py  main.py
services/worker-radar/tests/: test_aggregator.py
services/worker-understanding/: pyproject.toml
services/worker-understanding/tbc_worker_understanding/: __init__.py  backfill.py  bulk_embed.py  main.py  ollama_client.py  processor.py  schema.py
services/worker-understanding/tests/: conftest.py  test_main_dispatch.py  test_noise_filter.py  test_ollama_client.py  test_understanding.py
services/worker-weekly/: pyproject.toml
services/worker-weekly/tbc_worker_weekly/: __init__.py  assembler.py  main.py  sender.py
services/worker-weekly/tests/: test_weekly.py
