[project]
name = "telegram-brain-claude"
version = "0.1.0"
description = "Telegram Business Brain — second brain for Telegram-driven business."
requires-python = ">=3.12"
readme = "README.md"

[tool.uv.workspace]
members = [
    "packages/common",
    "services/ingestion",
    "services/worker-understanding",
    "services/worker-radar",
    "services/worker-commitments",
    "services/worker-brief",
    "services/worker-weekly",
    "services/worker-chat-tagger",
    "services/tg-bot",
    "services/mcp-server",
]

[tool.uv.sources]
tbc-common = { workspace = true }

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-postgresql>=6.0.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
    "detect-secrets>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# v13 prompt strings legitimately contain Turkish characters ("Tamamdır",
# "Barış", "mi/mu/mı") that ruff flags as ambiguous via RUF001. Suppressing
# at the file level is cleaner than per-line `# noqa` inside multi-line
# string literals (where comments cannot live).
"packages/common/tbc_common/prompts/understanding.py" = ["RUF001"]
"services/worker-understanding/tbc_worker_understanding/processor.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
exclude = ['(^|/)tests/', '(^|/)conftest\.py$']

# v13 hot-zone: relax strict mypy on the LLM call/parse path. These modules
# trade tight typing for prompt/parser flexibility (httpx returning Any,
# loosely-typed JSON envelopes from the model). Touching them risks behavior
# regressions for marginal type-precision gains.
[[tool.mypy.overrides]]
module = [
    "tbc_worker_understanding.processor",
    "tbc_worker_understanding.ollama_client",
    "tbc_common.prompts.understanding",
]
disallow_untyped_defs = false
disallow_any_explicit = false
warn_return_any = false
disable_error_code = ["assignment", "type-arg", "no-any-return", "no-untyped-def"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["packages", "services"]
markers = [
    "real_ollama: opt-in tests that hit a real Ollama instance",
    "integration: tests requiring Postgres",
]
