[project]
name = "tbc-ingestion"
version = "0.1.0"
description = "Telethon userbot ingestion service for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "tbc-common",
    "structlog>=24.4.0",
]

[tool.uv.sources]
tbc-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_ingestion"]
