[project]
name = "tbc-mcp-server"
version = "0.1.0"
description = "Read-only MCP server for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "pydantic>=2.8.0",
    "structlog>=24.4.0",
    "tbc-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
tbc-common = { workspace = true }
