[project]
name = "tbc-bot"
version = "0.1.0"
description = "Telegram bot UI for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "tbc-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_bot"]

[project.scripts]
tbc-bot = "tbc_bot.main:run"
