[project]
name = "tbc-worker-chat-tagger"
version = "0.1.0"
description = "Auto-classifies chats into role tags using embeddings + Ollama few-shot."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "tbc-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_worker_chat_tagger"]

[tool.uv.sources]
tbc-common = { workspace = true }
