[project]
name = "tbc-worker-radar"
version = "0.1.0"
description = "Radar signal aggregation worker for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "tbc-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_worker_radar"]

[tool.uv.sources]
tbc-common = { workspace = true }
