[project]
name = "tbc-worker-understanding"
version = "0.1.0"
description = "Understanding worker for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "structlog>=24.4.0",
    "tbc-common",
]

[tool.uv.sources]
tbc-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_worker_understanding"]
