[project]
name = "tbc-worker-weekly"
version = "0.1.0"
description = "Weekly Review worker for Telegram Business Brain."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.34.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "tbc-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbc_worker_weekly"]

[tool.uv.sources]
tbc-common = { workspace = true }

[project.scripts]
tbc-worker-weekly = "tbc_worker_weekly.main:main"
